tests/golden/errors/marker_with_args.kso
type null

main =
  bad = null true
  print "{bad}"
