tests/golden/errors/marker_with_args.stderr
error[signature]: `null` takes no fields; its bare mention is its value
  --> marker_with_args.kso:4:9
   4 |   bad = null true
               ^
